Revert "Samlet personopplysninger brukt i uttak i en tjeneste, skrevet om tester til å ikke gå mot db (#1585)"
This reverts commit f461fd92833524e898a328000a4f344daa70f3f9.